# gpustack-higress-plugin

./: CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  push.yaml  release.yaml
extensions/: Makefile
extensions/gpustack-token-usage/: main.go
gpustack_higress_plugins/: __init__.py  main.py  server.py
scripts/: fetch_remote_plugins.py  generate_manifest.py  verify_whl.py
